# DashboardAnalytic

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOWNLOAD.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: build_all.yml  build_docker.yml  unit-tests.yml
.run/: main.run.xml
docker/: .env  EXECUTION-INSTRUCTIONS.txt  docker-compose-dev.yml  docker-compose.yml  dockerfile  run-docker-dev.sh
help/: 00-configuration-file.md  01-web-interface.md  02-arguments-description-short.md  02-arguments-description.md  03-data-ingestion.md  04-kpi-analysis.md  05-word-reporting.md  06-powerpoint-reporting.md  07-admin-panel.md  08-docker-deployment.md  09-github-actions.md  10-testing.md  11-project-structure.md  12-roadmap.md  help.md
src/: BenchAutomations.py  DashboardAnalytic.py  __init__.py  config.py  main.py  version.py
src/modules/: analytics.py  auth.py  exports.py  ingestion.py  repository.py
src/utils/: charts.py  filesystem.py
src/web_interface/static/css/: app.css
src/web_interface/static/js/: app.js
src/web_interface/templates/: admin.html  base.html  dashboard.html  doc_view.html  login.html  workspace.html
tests/: conftest.py  test_analytics.py  test_app.py  test_exports.py
