[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bench-automations"
version = "0.1.0"
description = "Web platform for NetCheck and Smart Orchestrator KPI analytics"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jaimetur" }]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "pandas>=2.3.0,<3.0.0",
  "numpy>=2.3.0,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "python-pptx>=1.0.2,<2.0.0",
  "python-docx>=1.2.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
